# respan

./: .gitignore  CLAUDE.md  README.md
.github/: pull_request_template.md  release-packages.json
.github/workflows/: ci.yml  publish.yml
.release-intents/: 20260409-cli-publish-smoke.json  20260409-example.json  20260409-js-anthropic-publish-node24.json  20260409-js-workspace-publish-deps.json  20260409-openai-agents-publish-smoke.json  20260409-python-anthropic-readme-fix.json  20260409-python-anthropic-republish.json  20260409-python-new-package-publish.json  20260409-sdk-reorg-and-instrumentation.json  20260410-pydantic-ai-nested-provider-usage.json  20260412-claude-agent-sdk-instrumentation.json  20260414-cli-auth-baseurl.json  20260415-tracing-chat-tool-export.json  20260416-respan-tracing-manifest-sync.json  20260416-respan-tracing-readme-filter-clarity.json  20260418-anthropic-instrumentation-patch.json  20260418-claude-agent-sdk-and-sdk.json  20260418-tracing-sdk-version-attribute.json  20260419-cli-setup-command.json  20260419-respan-auto-discover.json  20260421-anthropic-managed-agent-tracing.json  20260422-respan-tracing-spanbuffer-preserve-active-parent.json  20260424-pydantic-ai-chat-message-fixes.json  20260425-vercel-instrumentation-patch.json  20260427-crewai-haystack-initial.json  20260429-tracing-fresh-root-default.json  20260430-langchain-instrumentation.json  20260501-langchain-instrumentation.json  20260501-tracing-republish-2-17-0.json  20260501-tracing-revert-3-0-0.json  20260501-tracing-suppressed-parent-context-helper.json  20260502-crewai-openinference-instrumentation.json  README.md
contribution/: README.md  architecture.md  cicd.md  publish.md  writing-instrumentations.md
docs/: cicd.md
javascript-sdks/: package.json
javascript-sdks/instrumentations/: README.md
javascript-sdks/legacy/: README.md
javascript-sdks/respan-cli/: package.json  tsconfig.json
javascript-sdks/respan-exporter-anthropic-agents/: README.md  package.json
javascript-sdks/respan-exporter-n8n/: package.json
javascript-sdks/respan-exporter-openai-agents/: package.json
javascript-sdks/respan-exporter-vercel/: package.json
python-sdks/examples/: conftest.py  (+2 more)
python-sdks/instrumentations/respan-instrumentation-anthropic/: README.md  pyproject.toml
python-sdks/instrumentations/respan-instrumentation-anthropic/src/respan_instrumentation_anthropic/: __init__.py  _constants.py  _instrumentation.py  _managed_agents.py  _messages.py
python-sdks/instrumentations/respan-instrumentation-anthropic/tests/: test_instrumentation.py
python-sdks/instrumentations/respan-instrumentation-claude-agent-sdk/: README.md  pyproject.toml
python-sdks/instrumentations/respan-instrumentation-claude-agent-sdk/src/respan_instrumentation_claude_agent_sdk/: __init__.py  _constants.py  _instrumentation.py  _processor.py
python-sdks/instrumentations/respan-instrumentation-claude-agent-sdk/tests/: test_instrumentation.py  test_real_gateway_integration.py
python-sdks/instrumentations/respan-instrumentation-crewai/: README.md  pyproject.toml
python-sdks/instrumentations/respan-instrumentation-crewai/examples/: basic_crew.py  crew_with_tools.py
python-sdks/instrumentations/respan-instrumentation-crewai/src/respan_instrumentation_crewai/: __init__.py  _instrumentation.py  _translator.py
python-sdks/instrumentations/respan-instrumentation-crewai/tests/: test_instrumentation.py  test_real_gateway_integration.py
python-sdks/instrumentations/respan-instrumentation-haystack/: README.md  pyproject.toml
python-sdks/instrumentations/respan-instrumentation-haystack/examples/: basic_pipeline.py  rag_pipeline.py
python-sdks/instrumentations/respan-instrumentation-haystack/src/respan_instrumentation_haystack/: __init__.py  _instrumentation.py
python-sdks/instrumentations/respan-instrumentation-langchain/: README.md  pyproject.toml
python-sdks/instrumentations/respan-instrumentation-langchain/src/respan_instrumentation_langchain/: __init__.py  _callback.py  _constants.py  _instrumentation.py
python-sdks/instrumentations/respan-instrumentation-langchain/tests/: test_instrumentation.py
python-sdks/instrumentations/respan-instrumentation-openinference/: README.md  pyproject.toml
python-sdks/instrumentations/respan-instrumentation-openinference/src/respan_instrumentation_openinference/: __init__.py  _instrumentation.py  _translator.py
python-sdks/instrumentations/respan-instrumentation-openinference/tests/: test_translator.py
python-sdks/instrumentations/respan-instrumentation-pydantic-ai/: README.md  pyproject.toml
python-sdks/instrumentations/respan-instrumentation-pydantic-ai/src/respan_instrumentation_pydantic_ai/: __init__.py  _constants.py  _instrumentation.py  _processor.py
python-sdks/instrumentations/respan-instrumentation-pydantic-ai/tests/: test_instrumentation.py
python-sdks/legacy/respan-exporter-braintrust/: README.md  pyproject.toml
python-sdks/legacy/respan-exporter-braintrust/examples/: quickstart.py
python-sdks/legacy/respan-exporter-braintrust/src/respan_exporter_braintrust/: __init__.py  constants.py  exporter.py  utils.py
python-sdks/legacy/respan-exporter-braintrust/tests/: test_exporter.py
python-sdks/legacy/respan-exporter-superagent/: README.md  pyproject.toml  pytest.ini
python-sdks/legacy/respan-exporter-superagent/src/respan_exporter_superagent/: __init__.py  exporter.py  utils.py
python-sdks/legacy/respan-exporter-superagent/tests/: test_superagent_exporter.py
python-sdks/respan/: pyproject.toml
python-sdks/respan-instrumentation-openai/: pyproject.toml
python-sdks/respan-instrumentation-openai-agents/: README.md  pyproject.toml
python-sdks/respan-instrumentation-openai-agents/src/respan_instrumentation_openai_agents/: __init__.py  _instrumentation.py  _otel_emitter.py  _utils.py
python-sdks/respan-instrumentation-openai/src/respan_instrumentation_openai/: __init__.py  _instrumentation.py
python-sdks/respan/src/respan/: __init__.py  _core.py  _otel_instrumentor.py  _types.py
scripts/: release_intents.py  release_inventory.py
(+397 files in other folders)
