[tool.poetry]
name = "respan-instrumentation-openai-agents"
version = "1.0.0"
description = "Respan instrumentation plugin for the OpenAI Agents SDK"
authors = ["Respan <team@respan.ai>"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "respan_instrumentation_openai_agents", from = "./src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
respan-tracing = ">=2.3.0"
respan-sdk = ">=2.5.0"
openai-agents = ">=0.3.1"

[tool.poetry.plugins."respan.instrumentations"]
openai-agents = "respan_instrumentation_openai_agents:OpenAIAgentsInstrumentor"

[tool.pytest.ini_options]
markers = [
    "integration: live network tests (requires API keys)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
