[tool.poetry]
name = "respan-ai"
version = "3.0.0"
description = "Unified entry point for Respan tracing and instrumentation plugins"
authors = ["Respan <team@respan.ai>"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "respan", from = "./src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
respan-tracing = ">=2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
