[tool.poetry]
name = "respan-instrumentation-pydantic-ai"
version = "0.1.0"
description = "Respan instrumentation plugin for PydanticAI"
authors = ["Respan <team@respan.ai>"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "respan_instrumentation_pydantic_ai", from = "./src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
respan-tracing = "^2.16.1"
respan-sdk = ">=2.5.0"
pydantic-ai = ">=0.2.0"
opentelemetry-semantic-conventions-ai = ">=0.4.1"

[tool.poetry.plugins."respan.instrumentations"]
pydantic-ai = "respan_instrumentation_pydantic_ai:PydanticAIInstrumentor"

[tool.pytest.ini_options]
markers = [
    "integration: live network tests (requires API keys)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
